z-index correction

--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -27,6 +27,7 @@
 		right: 0;
 		padding: 1rem;
 		margin: 0;
+		z-index: 99;
 		background: #fff;
 		box-shadow: 0px -2px 4px rgb(0 0 0 / 30%);
 
